adjust scss for users (scrollbar fix)

--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -134,7 +134,7 @@ p {
     display: inline-flex;
     flex-wrap: wrap;
     margin: 140px 0 0 calc($margin-width / 2);
-    width: calc(100% + 6px);
+    // width: calc(100% + 6px);
 }
 
 .user-container {
